Dark mode font color fix for toggle switches

--- a/vehicle_manager/gui-revised/css/settings-page.css
+++ b/vehicle_manager/gui-revised/css/settings-page.css
@@ -359,6 +359,9 @@
 .active{
     color: black;
 }
+.dark .switch-field-label.active{
+    color: white;
+}
 /*settings pane toggle  */
 .toggled{
     left: 40px;
